# gogo-app

./: .env.example  .gitignore  AGENTS.md  README.md  TASKS.md  mvp-architecture.md  package-lock.json  package.json  pyproject.toml
app/: README.md
app/backend/: agent_service.py  config.py  main.py  pi_rpc_client.py  pi_sdk_bridge.mjs  raw_service.py  security_service.py  session_event_store.py  session_manager.py  skill_service.py  wiki_service.py
app/frontend/: index.html
docs/: agent-architecture.md  agent-session-refactor-assessment.md  app-kb-boundary.md  client-architecture.md  code-doc-mapping.md  desktop-packaging-guide.md  desktop-packaging-options.md  desktop-packaging-regressions.md  electron-packaging-guide.md  frontend-workbench-elements.md  gogo-app-architecture.md  gogo-client-architecture.md  gogo-project-architecture.md  gogo-server-architecture.md  index.md  knowledge-base-architecture.md  knowledge-base-capabilities.md  mvp-architecture.md  open-source-readiness-refactor-plan.md  pi-sdk-bridge-architecture.md  pi-security-boundary.md  problem-log.md  release-target-and-boundaries.md  server-architecture.md  session-management.md  session-performance-optimization-log.md  tauri-migration-plan.md  tolaria-documentation-lessons-for-gogo.md  workspace-and-agent-runtime-refactor-plan.md
docs/public/: agent-architecture.md  architecture-overview.md  design-principles.md  developer-guide.md  frontend-workbench-elements.md  gogo-app-architecture.md  knowledge-base-architecture.md  (+3 more)
scripts/: clean.mjs  desktop-build.mjs
src-tauri/: tauri.conf.json
(+23 files in other folders)
